welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:9: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:12: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^SnakeBuggle:17: error: value unary_! is not a member of Unit
  while(!positionFinale()){
        ^SnakeBuggle:24: error: Unit does not take parameters
      else(){
            ^